/*
 * netsiege - A multiplayer point and click adventure
 * Copyright (C) 2014 Gregor Vollmer <gregor@celement.de>
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

package omsproto;
import "src/script/script.proto";

message GameObject {
	required uint32 id = 1;
	optional string name = 2;
	repeated float position = 3 [packed=true];
	optional bool is_visible = 4;
	optional uint32 entity_id = 5;
	optional script.pb.ScriptObject data = 6;
}

message GameObjectSet {
	repeated GameObject objects = 1;
}
